--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,6 +20,7 @@ header::after {
 nav a {
     margin: 0 15px;
     transition: all 0.3s ease;
+    text-decoration: none;
 }
 nav a:hover {
   transform: scale(1.1);
@@ -86,4 +87,5 @@ footer a:hover {
     position: fixed;
     bottom: 20px;
     right: 20px;
+    text-decoration: none;
 }
